Documentation for routes was added, fixed bugs
